--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -10,6 +10,15 @@ on:
         required: false
         default: false
         type: boolean
+      bump_type:
+        description: 'Version bump type (major, minor, patch)'
+        required: false
+        default: 'patch'
+        type: choice
+        options:
+          - patch
+          - minor
+          - major
 
 jobs:
   publish:
@@ -20,6 +29,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
     
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -30,6 +41,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install build twine
+    
+    - name: Auto-bump version for manual dispatch
+      if: ${{ github.event_name == 'workflow_dispatch' }}
+      run: |
+        python bump_version.py ${{ github.event.inputs.bump_type }}
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add .
+        git commit -m "Auto-bump version (${{ github.event.inputs.bump_type }})" || exit 0
+        git push
     
     - name: Build package
       run: python -m build
