--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -56,7 +56,7 @@ jobs:
       run: python -m build
     
     - name: Publish to Test PyPI
-      if: ${{ github.event.inputs.test_pypi == 'true' || github.event_name == 'workflow_dispatch' }}
+      if: ${{ github.event.inputs.test_pypi == 'true' }}
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
@@ -64,7 +64,7 @@ jobs:
         python -m twine upload --repository testpypi dist/*
     
     - name: Publish to PyPI
-      if: ${{ github.event_name == 'release' && github.event.action == 'published' }}
+      if: ${{ github.event_name == 'release' && github.event.action == 'published' || (github.event_name == 'workflow_dispatch' && github.event.inputs.test_pypi != 'true') }}
       env:
         TWINE_USERNAME: __token__
         TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
