--- a/js/package.json
+++ b/js/package.json
@@ -1,4 +1,53 @@
 {
-  "name": "gardefou",
-  "version": "0.1.0"
+  "name": "garde-fou",
+  "version": "0.1.0",
+  "description": "Protective wrappers around paid API clients with quotas & duplicate detection",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "dev": "tsc --watch",
+    "clean": "rm -rf dist",
+    "prepublishOnly": "npm run clean && npm run build && npm test",
+    "example": "npm run build && node examples/example.js",
+    "bump:patch": "node scripts/bump-version.js patch",
+    "bump:minor": "node scripts/bump-version.js minor",
+    "bump:major": "node scripts/bump-version.js major",
+    "release:patch": "node scripts/release.js patch",
+    "release:minor": "node scripts/release.js minor",
+    "release:major": "node scripts/release.js major",
+    "release:dry": "node scripts/release.js patch --dry-run"
+  },
+  "keywords": [
+    "api",
+    "rate-limiting",
+    "quota",
+    "protection",
+    "wrapper"
+  ],
+  "author": "Robin Fiévet <robinfievet@gmail.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rfievet/garde-fou.git",
+    "directory": "js"
+  },
+  "files": [
+    "dist/**/*",
+    "README.md"
+  ],
+  "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "@types/js-yaml": "^4.0.9",
+    "@types/node": "^20.0.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "js-yaml": "^4.1.0"
+  }
 }
