Add complete Ruby gem implementation with TypeScript improvements
Ruby Implementation:
- Complete Ruby gem with garde_fou package name
- Multiple calling patterns: call(), [], protect()
- GuardedClient mixin for class-level protection
- Comprehensive RSpec test suite (30 tests)
- Ruby-idiomatic API design
- Release automation scripts
- Full documentation and examples

TypeScript Improvements:
- Python-like callable syntax: guard(fn, args)
- Both direct call and explicit method patterns
- Enhanced test coverage (22 tests)
- Updated documentation with both calling patterns
- Real-world usage examples

Features:
- Call counting with configurable limits
- Duplicate call detection
- Flexible violation handlers (warn/raise/custom)
- JSON/YAML configuration support
- Cross-language API consistency

All three implementations (Python, TypeScript, Ruby) now have
feature parity with language-specific optimizations.

--- a/ruby/gardefou.config.json
+++ b/ruby/gardefou.config.json
@@ -1,4 +1,5 @@
 {
-  "quota": 100,
-  "rate_limit": "10/min"
+  "max_calls": 100,
+  "on_violation_max_calls": "warn",
+  "on_violation_duplicate_call": "warn"
 }
